# init-val-generator

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
docs/source/: clustering.rst  conf.py  core.rst  data_selection.rst  index.rst  init_val_generator.rst  method_of_moments.rst  tools.rst  util.rst
examples/: carta_example.ipynb  mock_image.py  real_image.py
init_val_generator/: __init__.py  clustering.py  core.py  data_selection.py  init_val_generator.py  method_of_moments.py  util.py
init_val_generator/tools/: gaussian_image.py
scripts/: example.py
tests/: test_clustering.py  test_core.py
tests/integration/: test_init_val.py
tests/unit/: test_clustering.py  test_core.py  test_data_selection.py  test_method_of_moments.py
